module-2/manifests/whoami-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-header
  namespace: apps
spec:
  headers:
    customRequestHeaders:
      X-HEADER-WHOAMI: "TRAEFIKHUB"
