module-2/manifests/whoami-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc-whoami
  namespace: apps
spec:
  plugin:
    oidc:
      issuer: "https://sts.windows.net/c7e2c1de-ea00-4c1f-bddc-19bab581b482/"
      clientID: "bd9a0a6f-e226-4ae4-a804-e98d2e561a73"
      clientSecret: "~Zl8Q~3esXFzEbkMognt0htMraKBEF0tQNv1~c-g"
      redirectUrl: "/cback"
      
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.traefik.${EXTERNAL_IP}.sslip.io`)
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: oidc-whoami
  tls:
    certResolver: le
