module-2/manifests/whoami-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.${EXTERNAL_IP}.sslip.io`)
      services:
        - name: whoami
          port: 80
      #middlewares:
      #  - name: whoami-header
